...
"submit" = "Submit";
"cancel" = "Cancel";
"delete" = "Delete";
"download" = "Download";
"set" = "Set";
"open" = "Open";
"settings" = "Settings";
"continue" = "Continue";
"confirm" = "Confirm";
"warning" = "Warning";
"error" = "Error";
"allow" = "Allow";
"later" = "Later";
...
"error_setup_failed" = "Failed to set up account";
"error_internal_parse_block" = "Internal error: could not parse MsgBlock. Please report this error to us.";
"error_decrypt" = "Could not decrypt:";
"error_startup" = "Startup Error";
"error_login" = "Login Error";
...
"compose_recipient_cc" = "Cc";
"compose_recipient_bcc" = "Bcc";
"compose_subject" = "Subject";
"compose_enable_google_contacts_search" = "Enable Google Contact Search";
"compose_no_contacts_found" = "No contacts found";
"compose_uploading" = "Uploading";
"compose_sent" = "Sent";
"compose_missing_contacts_scopes" = "To enable contacts search, please allow this device to access %@ of your Google account";
"compose_password_link" = "%@ has sent you a password-encrypted email.\n\nTo open message copy and paste the following link: %@";
...
// Folders
"folder_all_mail" = "All Mail";
"folder_all_inbox" = "Inbox";
"folder_add_account" = "Add account";
"folder_settings" = "Settings";
...
"folder_SENT" = "Sent";
"folder_IMPORTANT" = "Important";
"folder_TRASH" = "Trash";
"folder_DRAFT" = "Drafts";
"folder_SPAM" = "Spam";
"folder_STARRED" = "Starred";
...
// Sign in
"sign_in_privacy" = "Privacy";
"sign_in_terms" = "Terms";
"sign_in_security" = "Security";
"sign_in_description" = "Connect your email account\nto send encrypted messages";
"sign_in_gmail" = "Continue with Gmail";
"sign_in_outlook" = "Continue with Outlook";
"sign_in_other" = "Other email provider";

// Setup
...
"setup_enter" = "Enter your pass phrase";
"setup_load" = "Load Account";
"setup_use_another" = "Use Another Account";
"setup_no_backups" = "No backups found on this account";
"setup_enter_pass_phrase" = "Enter pass phrase";
"setup_wrong_pass_phrase_retry" = "Wrong pass phrase, please try again";
"setup_backup_email" = "This email contains a key backup. It will help you access your encrypted messages from other computers (along with your pass phrase). You can safely leave it in your inbox or archive it.\n\nThe key below is protected with pass phrase that only you know. You should make sure to note your pass phrase down.\n\nDO NOT DELETE THIS EMAIL. Write us at human@flowcrypt.com so that w
"setup_initial_create_key" = "Create a new key";
"setup_initial_import_key" = "Import my key";
"setup_create_key_title" = "Create key";
"setup_choose_pass_title" = "Choose pass phrase";
"setup_save_pass_locally" = "Save pass phrase";
"setup_save_pass_temporarily" = "Remember pass phrase temporarily";
"setup_enter_pass_phrase" = "Please enter pass phrase";
"setup_providers" = "Email Provider";
"setup_pass_phrase_title" = "Pass Phrase";
"setup_pass_phrase_confirm" = "Confirm Pass Phrase";

// Setup IMAP
"setup_imap_email" = "Email";
"setup_imap_password" = "Password";
"setup_imap_username" = "Username";
...
"import_key_title" = "Import Key";
"import_key_description" = "Import Private Key";
"import_key_file" = "Load From File";
"import_key_paste" = "Load From Clipboard";
"import_no_backups_clipboard" = "No backups found for account: \n";
"import_key_choose" = "Choose Another Key";
...

// Search
"search_title" = "Search";
"search_placeholder" = "Search All Mail";
"search_empty" = "No messages found";

// Settings
"settings_screen_title" = "Settings";
"settings_screen_backup" = "Backups";
"settings_screen_security" = "Security and Privacy";
"settings_screen_contacts" = "Contacts";
"settings_screen_keys" = "Keys";
"settings_screen_attester" = "Attester";
"settings_screen_notifications" = "Notifications";
"settings_screen_legal" = "Legal";
"settings_screen_experimental" = "Experimental";
"settings_legal_privacy" = "Privacy";
"settings_legal_terms" = "Terms";
"settings_legal_license" = "License";
"settings_legal_sources" = "Sources";

// Contacts
...
"contact_detail_copy" = "Public Key copied to clipboard";
"contact_detail_remove_public_key_error" = "Failed to remove public due to: %@";
"contact_key_detail_screen_title" = "Public Key";

// Contacts keys
...
"key_settings_subtitle" = "Public Keys are safe to share";

"key_settings_detail_show_public" = "Show public key";
"key_settings_detail_show_private_title" = "Show private key";
"key_settings_detail_copy" = "Copy to clipboard";
"key_settings_detail_save" = "Share";
"key_settings_detail_show_details" = "Show key details";

"key_settings_detail_fingerprint" = "Fingerprint";
...
"other_provider_smtp_title" = "Outgoing mail settings";
"other_provider_other_smtp_title" = "Set different credentials for SMTP";
"other_provider_connect" = "Connect";
"other_provider_error_password" = "Password must not be empty";
"other_provider_error_email" = "Email must not be empty";
...

"message_permanently_delete" = "You're about to permanently delete %@";
"message_permanently_delete_title" = "Are you sure?";
"draft_delete_confirmation" = "Delete draft?";

...
