...
import UIKit

extension TextCellNode.Input {
    static func loading(with size: CGSize) -> TextCellNode.Input {
        .init(
            backgroundColor: .backgroundColor,
            title: "loading_title".localized + "...",
            withSpinner: true,
            size: size
        )
    }
}

...
