...
    }

    func showErrAlert(_ message: String, onOk: (() -> Void)? = nil) {
        DispatchQueue.main.async {
            self.spinner?.hide(animated: true) // safe on main thread
            let alert = UIAlertController(title: "Error", message: message, preferredStyle: .alert)
            alert.addAction(UIAlertAction(title: "OK", style: .destructive) { action in onOk?() })
            self.present(alert, animated: true, completion: nil)
        }
    }



...
